--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@v3.3.
+        uses: actions/checkout@v3.3.0
         with:
           ref: refs/heads/issue
       - name: Setup pnpm
