--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,6 @@ jobs:
           ref: refs/heads/issue
       - name: Setup pnpm
         uses: pnpm/action-setup@v2.2.4
-        with:
-          run_install: true
-      - name: test
-        run: pnpm -v
+      - name: Run
+        run: node -v && pnpm -v
 
