--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3.3.0
       - name: Setup pnpm
-        uses: pnpm/action-setup@v2.2.4
-      - name: Run
-        run: node -v && pnpm -v
+        env: 
+          TEST:${{toJSON(github.actor)}}
+        run: echo $TEST
 
