--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,6 @@ jobs:
         uses: actions/checkout@v3.3.0
       - name: Setup pnpm
         env: 
-          TEST:${{toJSON(github.actor)}}
+          TEST: ${{toJSON(github)}}
         run: echo "$TEST";
 
