--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "license": "ISC",
     "devDependencies": {
       "fs-extra": "^11.1.0"
+    },
+    "engines": {
+      "node": ">=16"
     }
   }
   
