--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,47 @@
 name: auto close bad issue
 
 on:
-  push
-
+  issues:
+    types:
+      - "opened"
+env: 
+  OWNER: "tTdly-Old",
+  FAKE: "ttdly"
 jobs:
   autoclose:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2.2.4
-        with:
-          version: 7.27.0
-      - name: Cache node modules
-        id: cache-pnpm
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.pnpm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
+      # - uses: actions/checkout@v3
+      # - uses: pnpm/action-setup@v2.2.4
+      #   with:
+      #     version: 7.27.0
+      # - name: Cache node modules
+      #   id: cache-pnpm
+      #   uses: actions/cache@v3
+      #   env:
+      #     cache-name: cache-node-modules
+      #   with:
+      #     # npm cache files are stored in `~/.npm` on Linux/macOS
+      #     path: ~/.pnpm
+      #     key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-build-${{ env.cache-name }}-
+      #       ${{ runner.os }}-build-
+      #       ${{ runner.os }}-
 
-      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-        name: List the state of node modules
-        continue-on-error: true
-        run: pnpm list
+      # - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+      #   name: List the state of node modules
+      #   continue-on-error: true
+      #   run: pnpm list
 
-      - name: Install dependencies
-        run: pnpm install
+      # - name: Install dependencies
+      #   run: pnpm install
 
-      - name: test
-        run: pnpm test
+      - if: ${{ github.actor != $OWNER }}
+        name: isisi
+        run: echo "No"
+      - if: ${{ github.actor != $FAKE }}
+        name: isisi
+        run: echo "YES"
+        # run: node ./issue.js ""${{github.actor}}" "${{ github.event.issue.number }}" "${{ secrets.TOKEN }}"
 
