--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
     "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1"
     },
+    "type": "module",
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
       "fs-extra": "^11.1.0"
-    },
-    "engines": {
-      "node": ">=16"
     }
   }
   
