--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,14 +15,14 @@ jobs:
         name: CloseIssue&Lock
         uses: actions-cool/issues-helper@v2.2.1
         with:
-          actinons: "close-issue"
+          actions: 'close-issue'
           token: ${{ secrets.TOKEN }}
           issue-number: ${{ github.event.issue.number }}
-          body: "Not accepting other people's issues. So the issue was automatically closed and locked. Thanks and good luck."
+          body: 'Not accepting other people's issues. So the issue was automatically closed and locked. Thanks and good luck.'
       - if: ${{ github.actor != env.ONWER}}
         name: CloseIssue&Lock
         uses: actions-cool/issues-helper@v2.2.1
         with:
-          actinons: "lock-issue"
+          actions: 'lock-issue'
           token: ${{ secrets.TOKEN }}
           issue-number: ${{ github.event.issue.number }}        
