--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,15 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - if: ${{ github.actor != env.ONWER}}
-        name: CloseIssue&Lock
+        name: CloseIssue
         uses: actions-cool/issues-helper@v2.2.1
         with:
           actions: 'close-issue'
           token: ${{ secrets.TOKEN }}
           issue-number: ${{ github.event.issue.number }}
-          body: 'Not accepting other people's issues. So the issue was automatically closed and locked. Thanks and good luck.'
+          body: Not accepting other people's issues. So the issue was automatically closed and locked. Thanks and good luck.'
       - if: ${{ github.actor != env.ONWER}}
-        name: CloseIssue&Lock
+        name: LockIssue
         uses: actions-cool/issues-helper@v2.2.1
         with:
           actions: 'lock-issue'
