--- a/.github/workflows/pnpm.yml
+++ b/.github/workflows/pnpm.yml
@@ -4,6 +4,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3.3.0
       - name: Setup pnpm
   # You may pin to the exact commit or the version.
   # uses: pnpm/action-setup@c3b53f6a16e57305370b4ae5a540c2077a1d50dd
