--- a/.github/workflows/pnpm.yml
+++ b/.github/workflows/pnpm.yml
@@ -4,38 +4,34 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3.3.0
-      - name: Setup pnpm
-  # You may pin to the exact commit or the version.
-  # uses: pnpm/action-setup@c3b53f6a16e57305370b4ae5a540c2077a1d50dd
-        uses: pnpm/action-setup@v2.2.4
+      
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2.2.4
         with:
           version: 7.27.0
-          run_install: true
-      # - uses: actions/checkout@v3
+          run_install: false
+      - name: Cache node modules
+        id: cache-pnpm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          # pnpm cache files are stored in `~/.pnpm` on Linux/macOS
+          path: ~/.pnpm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
 
-      # - name: Cache node modules
-      #   id: cache-pnpm
-      #   uses: actions/cache@v3
-      #   env:
-      #     cache-name: cache-node-modules
-      #   with:
-      #     # pnpm cache files are stored in `~/.pnpm` on Linux/macOS
-      #     path: ~/.pnpm
-      #     key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-build-${{ env.cache-name }}-
-      #       ${{ runner.os }}-build-
-      #       ${{ runner.os }}-
+      - if: ${{ steps.cache-pnpm.outputs.cache-hit != 'true' }}
+        name: List the state of node modules
+        continue-on-error: true
+        run: pnpm list
 
-      # - if: ${{ steps.cache-pnpm.outputs.cache-hit != 'true' }}
-      #   name: List the state of node modules
-      #   continue-on-error: true
-      #   run: pnpm list
+      - name: Install dependencies
+        run: pnpm install
 
-      # - name: Install dependencies
-      #   run: pnpm install
-
-      # - name: Build
-      #   run: pnpm-v
+      - name: Build
+        run: pnpm-v
 
