--- a/.github/workflows/pnpm.yml
+++ b/.github/workflows/pnpm.yml
@@ -15,8 +15,7 @@ jobs:
         env:
           cache-name: cache-node-modules
         with:
-          # pnpm cache files are stored in `~/.pnpm` on Linux/macOS
-          path: ~/.pnpm
+          path: ./node_modules/.pnpm
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/pnpm-lock.yaml') }}
 
       - if: ${{ steps.cache-pnpm.outputs.cache-hit != 'true' }}
