--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - env:
-          INFO: ${{ github }}
+          INFO: ${{ toJSON(github) }}
         run: echo "$INFO"
