--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,11 @@
 name: Repository Dispatch Workflow
 on:
-  repository_dispatch:
-    types: [manual-trigger]
+  workflow_dispatch:
+    inputs:
+      name:
+        description: 'Person to greet'
+        required: true
+        default: 'World'
 
 jobs:
   run:
