--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,11 +1,6 @@
 name: Repository Dispatch Workflow
 on:
-  workflow_dispatch:
-    inputs:
-      name:
-        description: 'Person to greet'
-        required: true
-        default: 'World'
+  push
 
 jobs:
   run:
