--- a/.github/workflows/sync_discussion.yml
+++ b/.github/workflows/sync_discussion.yml
@@ -9,6 +9,8 @@ on:
       - locked
       - unlocked
 
+permissions: write-all
+
 jobs:
   auto-commit:
     runs-on: ubuntu-latest
@@ -47,8 +49,10 @@ jobs:
             git commit -m "Auto commit: $(date +'%Y-%m-%d %H:%M:%S')" -a
             echo "has_changes=true" >> $GITHUB_OUTPUT
           fi
-
+  
       - name: Push changes
         if: steps.commit.outputs.has_changes == 'true'
-        run: |
-          git push origin main   
+        uses: ad-m/github-push-action@master
+        with: 
+          branch: main
+          github_token: ${{ secrets.GITHUB_TOKEN }}
